--- a/dotMeModalCaptcha.html
+++ b/dotMeModalCaptcha.html
@@ -6,14 +6,18 @@
   <link rel="stylesheet" href="assets/css/nativize.css">
   <link rel="stylesheet" href="assets/css/global.css">
   <link rel="stylesheet" href="assets/css/loader.css">
-  <link rel="stylesheet" href="assets/css/dotMeTimer.css">
+  <link rel="stylesheet" href="assets/css/dotMeCaptcha.css">
 </head>
 <body>
+  <div id="dvImgCaptcha">
+    <img id="imgCaptcha" src="" />
+  </div>
   <div id="menuFloating">
-    <a id="btnHide" ><img id="imgBtnHide" src="./assets/img/ghost-open-white.png"/></a>
+    <a id="btnRefresh" ><img id="imgRefresh" src="./assets/img/refresh.png" /></a>
+    <a id="btnHide" ><img id="imgBtnHide" src="./assets/img/close.svg"/></a>
   </div>
   <script>
-    require("./dotme-timer");
+    require("./dotme-modal-captcha");
   </script>
 </body>
 </html>
