--- a/dotMeMain.html
+++ b/dotMeMain.html
@@ -14,11 +14,11 @@
     <div id="form">
       <div id="inputs">
         <div id="txtPersonalData">
-          <input id="txtRegistration" class="input" type="number" value="3105410" placeholder="Matrícula"/>
-          <input id="txt3FirstDigitsCpf" class="input" type="number" value="076" placeholder="CPF"/>
+          <input id="txtRegistration" class="input" type="number" placeholder="Matrícula"/>
+          <input id="txt3FirstDigitsCpf" class="input" type="number" placeholder="CPF"/>
         </div>
         <div id="dvImgCaptcha">
-          <img id="imgCaptcha" src=""  alt="capthca">  
+          <img id="imgCaptcha" src=""  alt="captcha">  
           <input id="txtCapctha" class="input" type="text" placeholder="Captcha" />
         </div>
       </div>
