fix: tela ficando para trás, erro no reset da hora

--- a/dotMeMain.html
+++ b/dotMeMain.html
@@ -46,9 +46,9 @@
     <div id="loader" class="lds-ripple hidden"><div></div><div></div></div>
   </div>
   <div id="menuFloating">
-    <img class="imgPlay hidden" src="./assets/img/play.png" />
-    <img class="imgPause hidden" src="./assets/img/pause.png" />
-    <a id="btnShow" class=""><img src="./assets/img/ghost-close-white.png"/></a>
+    <!--img class="imgPlay hidden" src="./assets/img/play.png" />
+    <img class="imgPause hidden" src="./assets/img/pause.png" /!-->
+    <a id="btnShow" class=""><img src="./assets/img/arrow-right.png"/></a>
   </div>
   <script>
     require("./dotme-main");
