--- a/dotMeModalGhost.html
+++ b/dotMeModalGhost.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="menuFloating">
-    <a id="btnHide" ><img id="imgBtnHide" src="./assets/img/ghost-open-white.png"/></a>
+    <a id="btnHide" ><img id="imgBtnHide" src="./assets/img/arrow-left.png"/></a>
   </div>
   <script>
     require("./dotme-modal-ghost");
